--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,3 +1,66 @@
+div.fullWidth {
+  width: 100%;
+}
+
+@media (max-width: 700px){
+  h1 {
+  	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  	font-weight: bold;
+  	color: #444;
+  	font-size: 30px;
+  	margin-bottom: 10px;
+  }
+  h2 {
+  	font-weight: 300;
+  	color: #FFFFFF;
+  	font-size: 26px;
+  	text-transform: uppercase;
+  	text-align: center;
+  	margin-bottom: 10px;
+  }
+
+  #homepage-image {
+  	height: 680px;
+    width: 100%;
+  	padding-top: 1px;
+  	background: url('../Images/Brooklyn.JPG') no-repeat center;
+  }
+  #homepage-image h2 {
+  	margin: 180px 0 40px 0;
+  }
+
+  #fashion-image {
+  	height: 680px;
+  	padding-top: 1px;
+  	background: url('../Images/Fashion.JPG') no-repeat center;
+    text-align: center;
+  }
+
+  #fashion-image h2 {
+  	margin: 180px 0 40px 0;
+  }
+
+  #footer-info {
+  	width: 100%;
+  	float: left;
+  	margin-top: 10px;
+  }
+
+  #footer-links {
+  	width: 220px;
+  	float: right;
+  }
+
+  #footer-links ul {
+  	width: 150px;
+  	float: left;
+  	margin-left: 20px;
+  }
+
+  #footer-links ul li {
+  	margin: 10px 0;
+  }
+}
 
 body {
 	/*background-color: #fff;*/
@@ -77,8 +140,8 @@ small {
 .wrapper {
 	margin: 0 auto;
 	padding: 0 10px;
-	width: 940px;
 }
+
 header {
 	height: 120px;
 }
